# for_building_thirdparty

./: .gitignore  CMakeLists.txt  README.md  build.dockerfile  build.sh  main.cpp
Dockerfile/: build.dockerfile
Makefile/: build.dockerfile
modules/: CMakeLists.txt
modules/datatype/include/: frame.h  framepoint.h  keyframe.h  localmap.h
modules/datatype/src/: frame.cpp  framepoint.cpp  globalmap.cpp  keyframeVec.cpp
modules/module1/: CMakeLists.txt
modules/module1/include/: datatype.h  frame.h  framepoint.h  globalmap.h  keyframe.h  keyframeVec.h  loadImage.h  localmap.h
modules/module1/src/: datatype.cpp  frame.cpp  framepoint.cpp  keyframe.cpp  keyframeVec.cpp  loadImage.cpp  localmap.cpp
modules/module2/: CMakeLists.txt
modules/module2/include/: quaternion.h  tracking.h
modules/module2/src/: quaternion.cpp  tracking.cpp
modules/module3/: CMakeLists.txt
modules/module3/include/: projection.h  similarity.h
modules/module3/src/: projection.cpp  similarity.cpp
modules/module4/: CMakeLists.txt
modules/module4/include/: optimization.h
modules/module5/: CMakeLists.txt
modules/module5/include/: draw.h  viewer.h
modules/module5/src/: draw.cpp  viewer.cpp
modules/process/include/: optimization.h  projection.h  quaternion.h  similarity.h
modules/process/src/: projection.cpp  quaternion.cpp
